# OpenGL-test

./: CMakeLists.txt  README.md
src/: int.hpp  main.cpp
src/game/: CameraController.h
src/input/: Input.md  input.h
src/render/: camera.h  frametimer.h  glload.h  input.h  matrices.h  render.cpp  render.h  screen.h
src/shader/: basic.fsh  basic.vsh
src/util/: fs.cpp  fs.h  registry.h  stbinit.cpp  util.h
